--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-size: 62.5%;
 
-  background-color: green;
+  background-color: rgb(70, 70, 70);
 }
 
 body {
@@ -16,12 +16,19 @@ body {
 }
 
 //Video CSS
-#canvas {
-  width: 60rem;
-  padding: 20rem 2rem;
-  text-align: center;
-  border: 1px solid #333;
+span {
+  background: red;
+  display: inline-block;
+  padding: 10px;
+  color: #fff;
+  margin: 10px 0;
+}
 
-  background-color: white;
-  margin: 2rem;
+.available span {
+  background: green;
+}
+
+.nearby span:after {
+  content: "nearby";
+  margin-left: 10px;
 }
